[workspace]
resolver = "2"
members = [
  "app-file-manager",
  "app-game-engine",
  "cross-platform",
  "shell-dock",
  "shell-panel",
  "so-base",
  "so-core",
]

[workspace.dependencies]
iced = "0.14"
iced_layershell = "0.14.2"
iced_aw = "0.13.0"
chrono = "0.4.43"
tokio = "1.49.0"
sdl2 = { version = "0.38.0" }
glam = "0.31.0"
